# open-rmf-project

./: .gitignore  Dockerfile  README.md  autostart  config  rmf_web
open-rmf_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
open-rmf_ws/install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key
open-rmf_ws/install/turtlesim/share/turtlesim/: local_setup.sh  package.sh
open-rmf_ws/log/: latest_build
scripts/: bash  build  run  run_cpu  run_docker
src/waver_description/: CMakeLists.txt
src/waver_description/urdf/: util.xacro  waver.xacro
src/waver_rmf/: CMakeLists.txt  package.xml
src/waver_rmf/maps/: test_turtlebot.building.yaml
waver_rmf/: CMakeLists.txt  package.xml
waver_rmf/launch/: gazebo_sim.launch.py
waver_rmf/maps/: coworking.building.yaml  coworking.world  waver_config.yaml
waver_rmf/worlds/: coworking.sdf
